libs/node/test/data/SMSHOME2/bad/includes/recursive_head.h
#!/usr/bin/env bash

#
# test recursive include
#
%include <recursive_head.h>
